@@ -7,6 +7,9 @@
 #include "lib.hpp"
 #include "win32gui.hpp"
 #include <windows.h>
+#ifndef DEBUG
+#define NDEBUG
+#endif
 #include <cassert>
 // ---------------------------------------------------------------------------
 namespace lib {
